# exercise-scrapper

./: .gitignore  analyzed_exercises.csv  batch_4_analyzed.csv  batches.py  check.py  exercises.html  final_conv.py  frame_breaker.py  gif_converter.py  gif_converter_new.py  main.py  pyproject.toml  response.html  s3_uploader.py  scrapper.py  splitter.py  test.py  video_editor.py  video_to_gif.py  video_to_gif_and_s3.py  virtuagym_exercises.csv  virtual_gym_exercises_with_s3_urls.csv
