[project]
name = "exercise-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.40",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "moviepy==1.0.3",
    "numpy>=2.4.2",
    "openai>=2.18.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "requests>=2.32.5",
]
